--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   responsive_builder: ^0.7.0
   cupertino_icons: ^1.0.5
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
